--- a/src/lib/ui/style.css
+++ b/src/lib/ui/style.css
@@ -1,6 +1,9 @@
 /* global stylesheet imported by `src/routes/__layout.svelte */
 
+/*
+
 :root {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-		'Open Sans', 'Helvetica Neue', sans-serif;
+  --some_stylish_property: 100%;
 }
+
+*/
