fix a path in a comment

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -1,4 +1,4 @@
-/* global stylesheet imported by `src/routes/__layout.svelte */
+/* global stylesheet imported by `src/routes/+layout.svelte */
 
 /*
 
