--- a/src/routes/moss.css
+++ b/src/routes/moss.css
@@ -7,11 +7,92 @@
 	justify-content: center;
 }
 
+.chip {
+	font-weight: 600;
+	padding: var(--space_xs5) var(--space_sm); /* maybe different inside `p`? using `calc` with `--size`? */
+	background-color: var(--fg_1);
+	border-radius: var(--radius_xs);
+}
+a.chip {
+	font-weight: 700;
+}
+
+.flex {
+	display: flex;
+}
+.flex_1 {
+	flex: 1;
+}
+
+/* TODO other button variants? */
+/* TODO this is slightly strange that it doesn't use --icon_size */
+/* These are used as modifiers to buttons, and so they use `:where` so they cascade.  */
+.icon_button {
+	width: var(--input_height);
+	height: var(--input_height);
+	min-width: var(--input_height);
+	min-height: var(--input_height);
+	flex-shrink: 0;
+	font-weight: 900;
+	padding: 0;
+}
+
+.inline {
+	display: inline;
+}
 .mb_0 {
 	margin-bottom: 0;
 }
 .mb_lg {
 	margin-bottom: var(--space_lg);
+}
+
+.menu_item {
+	--border_radius: 0;
+	--border_color: var(--border_color_3);
+	position: relative;
+	z-index: 2;
+	width: 100%;
+	min-height: var(--min_height, var(--icon_size_sm));
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: var(--menu_item_padding, var(--space_xs3) var(--space_xs));
+}
+.menu_item.selected {
+	/* TODO different patterns for border and bg? */
+	--border_color: var(--color_a_5);
+	background-color: var(--fg_1);
+	z-index: 1;
+}
+.menu_item.plain {
+	border: none;
+}
+.menu_item .content {
+	display: flex;
+	align-items: center;
+	flex: 1;
+	/* allows the flex children to shrink */
+	min-width: 0;
+}
+.menu_item .icon {
+	width: var(--icon_size, var(--icon_size_md));
+	margin-right: var(--space_sm);
+	flex-shrink: 0;
+	text-align: center;
+	font-weight: 900;
+}
+.menu_item .title {
+	margin-right: var(--space_lg);
+	flex-shrink: 1;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	line-height: var(--line_height_lg); /* prevents the bottom of g's and others from being cut off */
+}
+
+.mt_0 {
+	margin-top: 0;
 }
 .mt_xl2 {
 	margin-top: var(--space_xl2);
@@ -42,6 +123,13 @@
 	background-color: var(--panel_bg, var(--fg_1));
 }
 
+/* TODO maybe this belongs with the reset, like `selected`? or does `selected` belong here? */
+.plain:not(:hover) {
+	border-color: transparent;
+	box-shadow: none;
+	--button_fill: transparent;
+}
+
 .pt_xl {
 	padding-top: var(--space_xl);
 }
@@ -61,6 +149,36 @@
 	align-items: center;
 }
 
+.selectable {
+	--button_fill: color-mix(in hsl, var(--fill) 8%, transparent);
+	--button_fill_hover: color-mix(in hsl, var(--fill) 16%, transparent);
+	--button_fill_active: color-mix(in hsl, var(--fill) 24%, transparent);
+	cursor: pointer;
+	background-color: var(--button_fill);
+	border-color: var(--border_color_3);
+	border-style: var(--border_style);
+	border-width: var(--border_width);
+}
+.selectable:hover {
+	background-color: var(--button_fill_hover);
+	border-color: var(--border_color_2);
+}
+.selectable.selected,
+.selectable:active {
+	background-color: var(--button_fill_active);
+	border-color: var(--color_a_5);
+}
+.selectable.selected {
+	cursor: default;
+}
+.selectable.selected.deselectable:not(:disabled) {
+	cursor: pointer;
+}
+
+.shadow_inset_xs {
+	box-shadow: var(--shadow_inset_xs)
+		color-mix(in hsl, var(--shadow_color) var(--shadow_alpha, var(--shadow_alpha_1)), transparent);
+}
 .size_xl5 {
 	font-size: var(--size_xl5);
 }
