upgrade dev deps

--- a/src/routes/moss.css
+++ b/src/routes/moss.css
@@ -180,6 +180,9 @@ a.chip {
 .w_100 {
 	width: 100%;
 }
+.h_100 {
+	height: 100%;
+}
 .p_md {
 	padding: var(--space_md);
 }
@@ -205,6 +208,9 @@ a.chip {
 }
 .mt_xl2 {
 	margin-top: var(--space_xl2);
+}
+.mr_xs {
+	margin-right: var(--space_xs);
 }
 .mb_0 {
 	margin-bottom: 0;
